--- a/src/docs/api-doc.adoc
+++ b/src/docs/api-doc.adoc
@@ -75,3 +75,14 @@ include::{snippets}/auth-controller-test/respond_200_when_succeed_to_reissue_tok
 include::{snippets}/auth-controller-test/respond_200_when_succeed_to_reissue_tokens/response-fields.adoc[]
 ==== Sample Response
 include::{snippets}/auth-controller-test/respond_200_when_succeed_to_reissue_tokens/http-response.adoc[]
+
+== 3. 상품
+=== 3-1. 상품 목록 조회
+==== Request Fields
+include::{snippets}/product-controller-test/respond_200_when_read_product_list_successfully/request-fields.adoc[]
+==== Sample Request
+include::{snippets}/product-controller-test/respond_200_when_read_product_list_successfully/http-request.adoc[]
+==== Response Fields
+include::{snippets}/product-controller-test/respond_200_when_read_product_list_successfully/response-fields.adoc[]
+==== Sample Response
+include::{snippets}/product-controller-test/respond_200_when_read_product_list_successfully/http-response.adoc[]
