--- a/src/docs/asciidoc/api-doc.adoc
+++ b/src/docs/asciidoc/api-doc.adoc
@@ -108,4 +108,5 @@ include::{snippets}/review-controller-test/respond_201_when_success_to_create_re
 
 | `400 BAD REQUEST` | `INVALID_REQUEST` | 유효성 검사에 실패한 경우
 | `400 BAD REQUEST` |`NOT_FOUND_PRODUCT` | 해당하는 상품이 없는 경우
+| `500 INTERNAL SERVER ERROR` |`INTERNAL_SERVER_ERROR` | 서버 내부적인 오류가 발생한 경우
 |===
