--- a/src/docs/asciidoc/api-doc.adoc
+++ b/src/docs/asciidoc/api-doc.adoc
@@ -135,6 +135,21 @@ include::{snippets}/product-controller-test/respond_200_when_delete_product_like
 | `400 BAD REQUEST` | `NOT_FOUND_PRODUCT_LIKE` | 해당하는 상품 좋아요가 없는 경우
 |===
 
+=== 3-6. 상품 북마크 생성
+==== Path Parameters
+include::{snippets}/product-controller-test/respond_201_when_create_product_bookmark_succeed/path-parameters.adoc[]
+==== Sample Request
+include::{snippets}/product-controller-test/respond_201_when_create_product_bookmark_succeed/http-request.adoc[]
+==== Sample Response
+include::{snippets}/product-controller-test/respond_201_when_create_product_bookmark_succeed/http-response.adoc[]
+==== Error Response
+|===
+| HTTP Status | Error Code | Detail
+
+| `400 BAD REQUEST` | `NOT_FOUND_PRODUCT` | 해당하는 상품이 없는 경우
+| `409 CONFLICT` | `DUPLICATE_PRODUCT_BOOKMARK` | 해당하는 상품 북마크가 이미 있는 경우
+|===
+
 == 4. 리뷰
 === 4-1. 리뷰 작성
 ==== Path Parameters
