refactor: ResourceNotFound HttpStaus 변경 #40

--- a/src/docs/asciidoc/api-doc.adoc
+++ b/src/docs/asciidoc/api-doc.adoc
@@ -104,6 +104,12 @@ include::{snippets}/product-controller-test/respond_200_when_read_product_succes
 include::{snippets}/product-controller-test/respond_200_when_read_product_successfully/response-fields.adoc[]
 ==== Sample Response
 include::{snippets}/product-controller-test/respond_200_when_read_product_successfully/http-response.adoc[]
+==== Error Response
+|===
+| HTTP Status | Error Code | Detail
+
+| `404 NOT FOUND` | `NOT_FOUND_PRODUCT` | 해당하는 상품이 없는 경우
+|===
 
 === 3-4. 상품 좋아요 생성
 ==== Path Parameters
@@ -116,7 +122,7 @@ include::{snippets}/product-controller-test/respond_201_when_create_product_like
 |===
 | HTTP Status | Error Code | Detail
 
-| `400 BAD REQUEST` | `NOT_FOUND_PRODUCT` | 해당하는 상품이 없는 경우
+| `404 NOT FOUND` | `NOT_FOUND_PRODUCT` | 해당하는 상품이 없는 경우
 | `409 CONFLICT` | `DUPLICATE_PRODUCT_LIKE` | 해당하는 상품 좋아요가 이미 있는 경우
 |===
 
@@ -131,8 +137,8 @@ include::{snippets}/product-controller-test/respond_200_when_delete_product_like
 |===
 | HTTP Status | Error Code | Detail
 
-| `400 BAD REQUEST` | `NOT_FOUND_PRODUCT` | 해당하는 상품이 없는 경우
-| `400 BAD REQUEST` | `NOT_FOUND_PRODUCT_LIKE` | 해당하는 상품 좋아요가 없는 경우
+| `404 NOT FOUND` | `NOT_FOUND_PRODUCT` | 해당하는 상품이 없는 경우
+| `404 NOT FOUND` | `NOT_FOUND_PRODUCT_LIKE` | 해당하는 상품 좋아요가 없는 경우
 |===
 
 === 3-6. 상품 북마크 생성
@@ -146,7 +152,7 @@ include::{snippets}/product-controller-test/respond_201_when_create_product_book
 |===
 | HTTP Status | Error Code | Detail
 
-| `400 BAD REQUEST` | `NOT_FOUND_PRODUCT` | 해당하는 상품이 없는 경우
+| `404 NOT FOUND` | `NOT_FOUND_PRODUCT` | 해당하는 상품이 없는 경우
 | `409 CONFLICT` | `DUPLICATE_PRODUCT_BOOKMARK` | 해당하는 상품 북마크가 이미 있는 경우
 |===
 
@@ -161,8 +167,8 @@ include::{snippets}/product-controller-test/respond_200_when_delete_product_book
 |===
 | HTTP Status | Error Code | Detail
 
-| `400 BAD REQUEST` | `NOT_FOUND_PRODUCT` | 해당하는 상품이 없는 경우
-| `400 BAD REQUEST` | `NOT_FOUND_PRODUCT_BOOKMARK` | 해당하는 상품 북마크가 없는 경우
+| `404 NOT FOUND` | `NOT_FOUND_PRODUCT` | 해당하는 상품이 없는 경우
+| `404 NOT FOUND` | `NOT_FOUND_PRODUCT_BOOKMARK` | 해당하는 상품 북마크가 없는 경우
 |===
 
 == 4. 리뷰
