--- a/src/docs/asciidoc/api-doc.adoc
+++ b/src/docs/asciidoc/api-doc.adoc
@@ -88,6 +88,14 @@ include::{snippets}/product-controller-test/respond_200_when_read_product_filter
 === 3-2. 상품 목록 조회
 ==== Request Fields
 include::{snippets}/product-controller-test/respond_200_when_read_product_list_successfully/request-fields.adoc[]
+==== 정렬 기준 항목
+|===
+| sortBy 값 | 정렬 기준 | 비고
+
+| SCORE | 랭킹순  | 정렬 기준 미지정시 기본값
+| LIKE | 좋아요순 |
+| RATING | 별점순 |
+|===
 ==== Sample Request
 include::{snippets}/product-controller-test/respond_200_when_read_product_list_successfully/http-request.adoc[]
 ==== Response Fields
