docs: 특정 상품의 리뷰 조회 API 문서 작성 #44

--- a/src/docs/asciidoc/api-doc.adoc
+++ b/src/docs/asciidoc/api-doc.adoc
@@ -238,3 +238,21 @@ include::{snippets}/review-controller-test/respond_200_when_success_to_read_revi
 include::{snippets}/review-controller-test/respond_200_when_success_to_read_reviews/response-fields.adoc[]
 ==== Sample Response
 include::{snippets}/review-controller-test/respond_200_when_success_to_read_reviews/http-response.adoc[]
+
+=== 4-4. 특정 상품의 리뷰 목록 조회
+==== Request Fields
+include::{snippets}/review-controller-test/respond_200_when_success_to_read_product_reviews/request-fields.adoc[]
+==== 정렬 기준 항목
+|===
+| sortBy 값 | 정렬 기준 | 비고
+
+| LATEST | 최신순  | 정렬 기준 미지정시 기본값
+| LIKE | 좋아요순 |
+| RATING | 별점순 |
+|===
+==== Sample Request
+include::{snippets}/review-controller-test/respond_200_when_success_to_read_product_reviews/http-request.adoc[]
+==== Response Fields
+include::{snippets}/review-controller-test/respond_200_when_success_to_read_product_reviews/response-fields.adoc[]
+==== Sample Response
+include::{snippets}/review-controller-test/respond_200_when_success_to_read_product_reviews/http-response.adoc[]
