--- a/src/docs/asciidoc/api-doc.adoc
+++ b/src/docs/asciidoc/api-doc.adoc
@@ -6,9 +6,7 @@
 :toc-title: 목차
 :sectlinks:
 
-[[signUp]]
-== 1. 회원가입
-[[create-user]]
+== 1. 회원
 === 1-1. 이메일 중복 검사
 ==== Request Path Parameters
 include::{snippets}/user-controller-test/respond_true_when_email_exists/path-parameters.adoc[]
@@ -46,6 +44,22 @@ include::{snippets}/user-controller-test/respond_201_when_sign_up_succeed/http-r
 include::{snippets}/user-controller-test/respond_201_when_sign_up_succeed/response-fields.adoc[]
 ==== Sample Response
 include::{snippets}/user-controller-test/respond_201_when_sign_up_succeed/http-response.adoc[]
+
+=== 1-5. 회원 팔로우 생성
+==== Path Parameters
+include::{snippets}/user-controller-test/respond_201_when_create_user_follow_succeed/path-parameters.adoc[]
+==== Sample Request
+include::{snippets}/user-controller-test/respond_201_when_create_user_follow_succeed/http-request.adoc[]
+==== Sample Response
+include::{snippets}/user-controller-test/respond_201_when_create_user_follow_succeed/http-response.adoc[]
+==== Error Response
+|===
+| HTTP Status | Error Code | Detail
+
+| `400 BAD REQUEST` | `BAD_REQUEST_USER_FOLLOW` | 본인을 팔로우하는 경우
+| `404 NOT FOUND` | `NOT_FOUND_USER` | 해당하는 유저가 없는 경우
+| `409 CONFLICT` | `DUPLICATE_USER_FOLLOW` | 해당하는 유저 팔로우가 이미 있는 경우
+|===
 
 == 2. 인증
 === 2-1. 로그인
