--- a/src/docs/asciidoc/api-doc.adoc
+++ b/src/docs/asciidoc/api-doc.adoc
@@ -225,18 +225,14 @@ include::{snippets}/product-controller-test/respond_200_when_delete_product_book
 == 4. 리뷰
 === 4-1. 리뷰 작성
 ==== Path Parameters
-include::{snippets}/review-controller-test/respond_201_when_success_to_create_review/path-parameters.adoc[]
+include::{snippets}/review-controller-test/respond_201_when_succeed_to_create_review/path-parameters.adoc[]
 ==== Request Form Data
-===== Fields
-include::{snippets}/review-controller-test/respond_201_when_success_to_create_review/form-parameters.adoc[]
-===== Multipart
-include::{snippets}/review-controller-test/respond_201_when_success_to_create_review/request-parts.adoc[]
+===== Request Fields
+include::{snippets}/review-controller-test/respond_201_when_succeed_to_create_review/request-fields.adoc[]
 ==== Sample Request
-include::{snippets}/review-controller-test/respond_201_when_success_to_create_review/http-request.adoc[]
-==== Sample CURL Request
-include::{snippets}/review-controller-test/respond_201_when_success_to_create_review/curl-request.adoc[]
-==== Sample response
-include::{snippets}/review-controller-test/respond_201_when_success_to_create_review/http-response.adoc[]
+include::{snippets}/review-controller-test/respond_201_when_succeed_to_create_review/http-request.adoc[]
+==== Sample Response
+include::{snippets}/review-controller-test/respond_201_when_succeed_to_create_review/http-response.adoc[]
 ==== Error Response
 |===
 | HTTP Status | Error Code | Detail
@@ -244,18 +240,17 @@ include::{snippets}/review-controller-test/respond_201_when_success_to_create_re
 | `400 BAD REQUEST` | `INVALID_REQUEST` | 유효성 검사에 실패한 경우
 | `400 BAD REQUEST` |`NOT_FOUND_PRODUCT` | 해당하는 상품이 없는 경우
 | `409 BAD REQUEST` |`DUPLICATE_REVIEW` | 해당 상품에 대한 리뷰를 이미 작성한 경우
-| `500 INTERNAL SERVER ERROR` |`INTERNAL_SERVER_ERROR` | 서버 내부적인 오류가 발생한 경우
 |===
 
 === 4-2. 리뷰 수정
 ==== Path Parameters
-include::{snippets}/review-controller-test/respond_200_when_success_to_update_review/path-parameters.adoc[]
-===== Fields
-include::{snippets}/review-controller-test/respond_200_when_success_to_update_review/request-fields.adoc[]
+include::{snippets}/review-controller-test/respond_200_when_succeed_to_update_review/path-parameters.adoc[]
+===== Request Fields
+include::{snippets}/review-controller-test/respond_200_when_succeed_to_update_review/request-fields.adoc[]
 ==== Sample Request
-include::{snippets}/review-controller-test/respond_200_when_success_to_update_review/http-request.adoc[]
-==== Sample response
-include::{snippets}/review-controller-test/respond_200_when_success_to_update_review/http-response.adoc[]
+include::{snippets}/review-controller-test/respond_200_when_succeed_to_update_review/http-request.adoc[]
+==== Sample Response
+include::{snippets}/review-controller-test/respond_200_when_succeed_to_update_review/http-response.adoc[]
 ==== Error Response
 |===
 | HTTP Status | Error Code | Detail
