--- a/src/docs/asciidoc/api-doc.adoc
+++ b/src/docs/asciidoc/api-doc.adoc
@@ -325,3 +325,13 @@ include::{snippets}/review-controller-test/respond_200_when_succeed_to_delete_re
 | `404 NOT FOUND` | `NOT_FOUND_REVIEW` | 해당하는 리뷰가 없는 경우
 | `404 NOT FOUND` | `NOT_FOUND_REVIEW_LIKE` | 해당하는 리뷰 좋아요가 없는 경우
 |===
+== 5. 이미지
+=== 5-1. 이미지 업로드
+==== Path Parameters
+include::{snippets}/image-controller-test/respond_200_when_succeed_to_upload_images/path-parameters.adoc[]
+===== Request Parts
+include::{snippets}/image-controller-test/respond_200_when_succeed_to_upload_images/request-parts.adoc[]
+==== Sample Request
+include::{snippets}/image-controller-test/respond_200_when_succeed_to_upload_images/http-request.adoc[]
+==== Sample Response
+include::{snippets}/image-controller-test/respond_200_when_succeed_to_upload_images/http-response.adoc[]
