--- a/src/docs/asciidoc/api-doc.adoc
+++ b/src/docs/asciidoc/api-doc.adoc
@@ -110,6 +110,26 @@ include::{snippets}/user-controller-test/respond_200_when_read_liked_product_lis
 ==== Sample Response
 include::{snippets}/user-controller-test/respond_200_when_read_liked_product_list_successfully/http-response.adoc[]
 
+=== 1-9. 특정 회원의 북마크 상품 목록 조회
+==== Path Parameters
+include::{snippets}/user-controller-test/respond_200_when_read_bookmarked_product_list_successfully/path-parameters.adoc[]
+==== Request Fields
+include::{snippets}/user-controller-test/respond_200_when_read_bookmarked_product_list_successfully/request-fields.adoc[]
+==== 정렬 기준 항목
+|===
+| sortBy 값 | 정렬 기준 | 비고
+
+| SCORE | 랭킹순  | 정렬 기준 미지정시 기본값
+| RATING | 별점순 |
+| REVIEW_COUNT | 리뷰순 |
+|===
+==== Sample Request
+include::{snippets}/user-controller-test/respond_200_when_read_bookmarked_product_list_successfully/http-request.adoc[]
+==== Response Fields
+include::{snippets}/user-controller-test/respond_200_when_read_bookmarked_product_list_successfully/response-fields.adoc[]
+==== Sample Response
+include::{snippets}/user-controller-test/respond_200_when_read_bookmarked_product_list_successfully/http-response.adoc[]
+
 == 2. 인증
 === 2-1. 로그인
 ==== Request Fields
