--- a/src/docs/asciidoc/api-doc.adoc
+++ b/src/docs/asciidoc/api-doc.adoc
@@ -100,7 +100,23 @@ include::{snippets}/user-controller-test/respond_200_when_delete_user_follow_suc
 | `404 NOT FOUND` | `NOT_FOUND_USER_FOLLOW` | 해당하는 팔로우가 없는 경우
 |===
 
-=== 1-9. 특정 회원의 좋아요 상품 목록 조회
+=== 1-9. 태그 매칭률 조회
+==== Path Parameters
+include::{snippets}/user-controller-test/respond_200_when_read_user_tag_match_percentage_successfully/path-parameters.adoc[]
+==== Sample Request
+include::{snippets}/user-controller-test/respond_200_when_read_user_tag_match_percentage_successfully/http-request.adoc[]
+==== Response Fields
+include::{snippets}/user-controller-test/respond_200_when_read_user_tag_match_percentage_successfully/response-fields.adoc[]
+==== Sample Response
+include::{snippets}/user-controller-test/respond_200_when_read_user_tag_match_percentage_successfully/http-response.adoc[]
+==== Error Response
+|===
+| HTTP Status | Error Code | Detail
+
+| `404 NOT FOUND` | `NOT_FOUND_USER` | 해당하는 유저가 없는 경우
+|===
+
+=== 1-10. 특정 회원의 좋아요 상품 목록 조회
 ==== Path Parameters
 include::{snippets}/user-controller-test/respond_200_when_read_liked_product_list_successfully/path-parameters.adoc[]
 ==== Request Fields
@@ -120,7 +136,7 @@ include::{snippets}/user-controller-test/respond_200_when_read_liked_product_lis
 ==== Sample Response
 include::{snippets}/user-controller-test/respond_200_when_read_liked_product_list_successfully/http-response.adoc[]
 
-=== 1-10. 특정 회원의 북마크 상품 목록 조회
+=== 1-11. 특정 회원의 북마크 상품 목록 조회
 ==== Path Parameters
 include::{snippets}/user-controller-test/respond_200_when_read_bookmarked_product_list_successfully/path-parameters.adoc[]
 ==== Request Fields
